--- a/package.json
+++ b/package.json
@@ -83,5 +83,5 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://backend-church.vercel.app"
 }
