--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "TAC-GH, Nii Boiman Central",
+  "name": "TAC-NBC",
   "short_name": "TAC-NBC",
   "description": "Connect with us, chat with our christian-based AI chatbot.",
   "theme_color": "#4C1D95",
