--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,20 @@
 {
-  "name": "TAC-NBC",
-  "short_name": "TAC-NBC",
-  "description": "Connect with us, chat with our christian-based AI chatbot.",
-  "theme_color": "#4C1D95",
-  "background_color": "#ffffff",
-  "display": "standalone",
-  "start_url": "/",
-  "scope": "/",
+  "short_name": "TAC NBC",
+  "name": "The Apostolic Church Nii Boiman",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
-  ]
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 } 
