--- a/netlify.toml
+++ b/netlify.toml
@@ -9,4 +9,5 @@
 
 [build.environment]
   NODE_VERSION = "18"
-  NPM_FLAGS = "--legacy-peer-deps" 
+  NPM_FLAGS = "--legacy-peer-deps"
+  VITE_API_URL = "https://backend-church.vercel.app" 
