--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@glowstudent/youversion": "^2.2.0",
     "@google/generative-ai": "^0.21.0",
     "@gracious.tech/fetch-client": "^0.9.0",
     "@hookform/resolvers": "^3.9.0",
