--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [[redirects]]
-  from = "/hymns/*"
+  from = "/hymn/*"
   to = "/index.html"
   status = 200
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200 
+  status = 200
